Switching from Arrays.asList() to List.of()