@@ -39,7 +39,7 @@ class TeamComparatorIntegrationTest extends NATCServiceIntegrationTest {
                 final Team team1 = Team.builder().teamId(1).year("2000").division(1).games(100).playoffRank(0).wins(46).build();
                 final Team team2 = Team.builder().teamId(2).year("2000").division(2).games(100).playoffRank(0).wins(46).build();
 
-                final List<TeamGame> team1WinningGames = Arrays.asList(
+                final List<TeamGame> team1WinningGames = List.of(
                         TeamGame.builder().gameId(1).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team1.getTeamId()).opponent(team2.getTeamId()).win(1).build(),
                         TeamGame.builder().gameId(2).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team1.getTeamId()).opponent(team2.getTeamId()).win(1).build(),
                         TeamGame.builder().gameId(3).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team1.getTeamId()).opponent(team2.getTeamId()).win(1).build(),
@@ -47,7 +47,7 @@ class TeamComparatorIntegrationTest extends NATCServiceIntegrationTest {
                         TeamGame.builder().gameId(5).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team1.getTeamId()).opponent(team2.getTeamId()).win(1).build()
                 );
 
-                final List<TeamGame> team2WinningGames = Arrays.asList(
+                final List<TeamGame> team2WinningGames = List.of(
                         TeamGame.builder().gameId(6).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team2.getTeamId()).opponent(team1.getTeamId()).win(1).build(),
                         TeamGame.builder().gameId(7).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team2.getTeamId()).opponent(team1.getTeamId()).win(1).build()
                 );
@@ -63,7 +63,7 @@ class TeamComparatorIntegrationTest extends NATCServiceIntegrationTest {
                 final Team team1 = Team.builder().teamId(1).year("2000").division(1).games(100).playoffRank(0).wins(46).build();
                 final Team team2 = Team.builder().teamId(2).year("2000").division(2).games(100).playoffRank(0).wins(46).build();
 
-                final List<TeamGame> team1WinningGames = Arrays.asList(
+                final List<TeamGame> team1WinningGames = List.of(
                         TeamGame.builder().gameId(1).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team1.getTeamId()).opponent(team2.getTeamId()).win(1).build(),
                         TeamGame.builder().gameId(2).year("2001").type(GameType.REGULAR_SEASON.getValue()).teamId(team1.getTeamId()).opponent(team2.getTeamId()).win(1).build(),
                         TeamGame.builder().gameId(3).year("2002").type(GameType.REGULAR_SEASON.getValue()).teamId(team1.getTeamId()).opponent(team2.getTeamId()).win(1).build(),
@@ -71,7 +71,7 @@ class TeamComparatorIntegrationTest extends NATCServiceIntegrationTest {
                         TeamGame.builder().gameId(5).year("2004").type(GameType.REGULAR_SEASON.getValue()).teamId(team1.getTeamId()).opponent(team2.getTeamId()).win(1).build()
                 );
 
-                final List<TeamGame> team2WinningGames = Arrays.asList(
+                final List<TeamGame> team2WinningGames = List.of(
                         TeamGame.builder().gameId(6).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team2.getTeamId()).opponent(team1.getTeamId()).win(1).build(),
                         TeamGame.builder().gameId(7).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team2.getTeamId()).opponent(team1.getTeamId()).win(1).build(),
                         TeamGame.builder().gameId(8).year("2005").type(GameType.REGULAR_SEASON.getValue()).teamId(team2.getTeamId()).opponent(team1.getTeamId()).win(1).build(),
@@ -90,7 +90,7 @@ class TeamComparatorIntegrationTest extends NATCServiceIntegrationTest {
                 final Team team1 = Team.builder().teamId(1).year("2000").division(1).games(100).playoffRank(0).wins(46).build();
                 final Team team2 = Team.builder().teamId(2).year("2000").division(2).games(100).playoffRank(0).wins(46).build();
 
-                final List<TeamGame> team1WinningGames = Arrays.asList(
+                final List<TeamGame> team1WinningGames = List.of(
                         TeamGame.builder().gameId(1).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team1.getTeamId()).opponent(team2.getTeamId()).win(1).build(),
                         TeamGame.builder().gameId(2).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team1.getTeamId()).opponent(team2.getTeamId()).win(1).build(),
                         TeamGame.builder().gameId(3).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team1.getTeamId()).opponent(4).win(1).build(),
@@ -101,7 +101,7 @@ class TeamComparatorIntegrationTest extends NATCServiceIntegrationTest {
                         TeamGame.builder().gameId(8).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(5).opponent(team2.getTeamId()).win(1).build()
                 );
 
-                final List<TeamGame> team2WinningGames = Arrays.asList(
+                final List<TeamGame> team2WinningGames = List.of(
                         TeamGame.builder().gameId(9).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team2.getTeamId()).opponent(3).win(1).build(),
                         TeamGame.builder().gameId(10).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team2.getTeamId()).opponent(team1.getTeamId()).win(1).build(),
                         TeamGame.builder().gameId(11).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team2.getTeamId()).opponent(7).win(1).build(),
@@ -122,7 +122,7 @@ class TeamComparatorIntegrationTest extends NATCServiceIntegrationTest {
                 final Team team1 = Team.builder().teamId(1).year("2000").division(1).games(100).playoffRank(0).wins(46).build();
                 final Team team2 = Team.builder().teamId(2).year("2000").division(2).games(100).playoffRank(0).wins(46).build();
 
-                final List<TeamGame> team1WinningGames = Arrays.asList(
+                final List<TeamGame> team1WinningGames = List.of(
                         TeamGame.builder().gameId(1).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team1.getTeamId()).opponent(team2.getTeamId()).win(1).build(),
                         TeamGame.builder().gameId(2).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team1.getTeamId()).opponent(team2.getTeamId()).win(0).build(),
                         TeamGame.builder().gameId(3).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team1.getTeamId()).opponent(team2.getTeamId()).win(0).build(),
@@ -130,7 +130,7 @@ class TeamComparatorIntegrationTest extends NATCServiceIntegrationTest {
                         TeamGame.builder().gameId(5).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team1.getTeamId()).opponent(team2.getTeamId()).win(0).build()
                 );
 
-                final List<TeamGame> team2WinningGames = Arrays.asList(
+                final List<TeamGame> team2WinningGames = List.of(
                         TeamGame.builder().gameId(6).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team2.getTeamId()).opponent(team1.getTeamId()).win(1).build(),
                         TeamGame.builder().gameId(7).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team2.getTeamId()).opponent(team1.getTeamId()).win(1).build(),
                         TeamGame.builder().gameId(8).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team2.getTeamId()).opponent(team1.getTeamId()).win(1).build(),
@@ -149,7 +149,7 @@ class TeamComparatorIntegrationTest extends NATCServiceIntegrationTest {
                 final Team team1 = Team.builder().teamId(1).year("2000").division(1).games(100).playoffRank(0).wins(46).build();
                 final Team team2 = Team.builder().teamId(2).year("2000").division(2).games(100).playoffRank(0).wins(46).build();
 
-                final List<TeamGame> team1WinningGames = Arrays.asList(
+                final List<TeamGame> team1WinningGames = List.of(
                         TeamGame.builder().gameId(1).year("2000").type(GameType.PRESEASON.getValue()).teamId(team1.getTeamId()).opponent(team2.getTeamId()).win(1).build(),
                         TeamGame.builder().gameId(2).year("2000").type(GameType.PRESEASON.getValue()).teamId(team1.getTeamId()).opponent(team2.getTeamId()).win(1).build(),
                         TeamGame.builder().gameId(3).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team1.getTeamId()).opponent(team2.getTeamId()).win(1).build(),
@@ -157,7 +157,7 @@ class TeamComparatorIntegrationTest extends NATCServiceIntegrationTest {
                         TeamGame.builder().gameId(5).year("2000").type(GameType.POSTSEASON.getValue()).teamId(team1.getTeamId()).opponent(team2.getTeamId()).win(1).build()
                 );
 
-                final List<TeamGame> team2WinningGames = Arrays.asList(
+                final List<TeamGame> team2WinningGames = List.of(
                         TeamGame.builder().gameId(6).year("2000").type(GameType.PRESEASON.getValue()).teamId(team2.getTeamId()).opponent(team1.getTeamId()).win(1).build(),
                         TeamGame.builder().gameId(7).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team2.getTeamId()).opponent(team1.getTeamId()).win(1).build(),
                         TeamGame.builder().gameId(8).year("2000").type(GameType.REGULAR_SEASON.getValue()).teamId(team2.getTeamId()).opponent(team1.getTeamId()).win(1).build(),
@@ -180,12 +180,12 @@ class TeamComparatorIntegrationTest extends NATCServiceIntegrationTest {
                 final Team team1 = Team.builder().teamId(1).year("2000").division(1).games(100).playoffRank(0).wins(46).build();
                 final Team team2 = Team.builder().teamId(2).year("2000").division(2).games(100).playoffRank(0).wins(46).build();
                 
-                final List<TeamOffenseSummary> teamOffenseSummaryList = Arrays.asList(
+                final List<TeamOffenseSummary> teamOffenseSummaryList = List.of(
                         TeamOffenseSummary.builder().year(team1.getYear()).type(GameType.REGULAR_SEASON.getValue()).teamId(team1.getTeamId()).score(123).build(),
                         TeamOffenseSummary.builder().year(team2.getYear()).type(GameType.REGULAR_SEASON.getValue()).teamId(team2.getTeamId()).score(456).build()
                 );
                 
-                final List<TeamDefenseSummary> teamDefenseSummaryList = Arrays.asList(
+                final List<TeamDefenseSummary> teamDefenseSummaryList = List.of(
                         TeamDefenseSummary.builder().year(team1.getYear()).type(GameType.REGULAR_SEASON.getValue()).teamId(team1.getTeamId()).score(456).build(),
                         TeamDefenseSummary.builder().year(team2.getYear()).type(GameType.REGULAR_SEASON.getValue()).teamId(team2.getTeamId()).score(123).build()
                 );
@@ -201,12 +201,12 @@ class TeamComparatorIntegrationTest extends NATCServiceIntegrationTest {
                 final Team team1 = Team.builder().teamId(1).year("2000").division(1).games(100).playoffRank(0).wins(46).build();
                 final Team team2 = Team.builder().teamId(2).year("2000").division(2).games(100).playoffRank(0).wins(46).build();
 
-                final List<TeamOffenseSummary> teamOffenseSummaryList = Arrays.asList(
+                final List<TeamOffenseSummary> teamOffenseSummaryList = List.of(
                         TeamOffenseSummary.builder().year(team1.getYear()).type(GameType.REGULAR_SEASON.getValue()).teamId(team1.getTeamId()).score(123).build(),
                         TeamOffenseSummary.builder().year("1999").type(GameType.REGULAR_SEASON.getValue()).teamId(team2.getTeamId()).score(456).build()
                 );
 
-                final List<TeamDefenseSummary> teamDefenseSummaryList = Arrays.asList(
+                final List<TeamDefenseSummary> teamDefenseSummaryList = List.of(
                         TeamDefenseSummary.builder().year(team1.getYear()).type(GameType.REGULAR_SEASON.getValue()).teamId(team1.getTeamId()).score(456).build(),
                         TeamDefenseSummary.builder().year("1999").type(GameType.REGULAR_SEASON.getValue()).teamId(team2.getTeamId()).score(123).build()
                 );
@@ -222,12 +222,12 @@ class TeamComparatorIntegrationTest extends NATCServiceIntegrationTest {
                 final Team team1 = Team.builder().teamId(1).year("2000").division(1).games(100).playoffRank(0).wins(46).build();
                 final Team team2 = Team.builder().teamId(2).year("2000").division(2).games(100).playoffRank(0).wins(46).build();
 
-                final List<TeamOffenseSummary> teamOffenseSummaryList = Arrays.asList(
+                final List<TeamOffenseSummary> teamOffenseSummaryList = List.of(
                         TeamOffenseSummary.builder().year(team1.getYear()).type(GameType.REGULAR_SEASON.getValue()).teamId(team1.getTeamId()).score(222).build(),
                         TeamOffenseSummary.builder().year(team2.getYear()).type(GameType.PRESEASON.getValue()).teamId(team2.getTeamId()).score(456).build()
                 );
 
-                final List<TeamDefenseSummary> teamDefenseSummaryList = Arrays.asList(
+                final List<TeamDefenseSummary> teamDefenseSummaryList = List.of(
                         TeamDefenseSummary.builder().year(team1.getYear()).type(GameType.REGULAR_SEASON.getValue()).teamId(team1.getTeamId()).score(111).build(),
                         TeamDefenseSummary.builder().year(team2.getYear()).type(GameType.POSTSEASON.getValue()).teamId(team2.getTeamId()).score(123).build()
                 );
@@ -243,12 +243,12 @@ class TeamComparatorIntegrationTest extends NATCServiceIntegrationTest {
                 final Team team1 = Team.builder().teamId(1).year("2000").division(1).games(100).playoffRank(0).wins(46).build();
                 final Team team2 = Team.builder().teamId(2).year("2000").division(2).games(100).playoffRank(0).wins(46).build();
 
-                final List<TeamOffenseSummary> teamOffenseSummaryList = Arrays.asList(
+                final List<TeamOffenseSummary> teamOffenseSummaryList = List.of(
                         TeamOffenseSummary.builder().year(team1.getYear()).type(GameType.REGULAR_SEASON.getValue()).teamId(3).score(123).build(),
                         TeamOffenseSummary.builder().year(team2.getYear()).type(GameType.REGULAR_SEASON.getValue()).teamId(4).score(456).build()
                 );
 
-                final List<TeamDefenseSummary> teamDefenseSummaryList = Arrays.asList(
+                final List<TeamDefenseSummary> teamDefenseSummaryList = List.of(
                         TeamDefenseSummary.builder().year(team1.getYear()).type(GameType.REGULAR_SEASON.getValue()).teamId(5).score(456).build(),
                         TeamDefenseSummary.builder().year(team2.getYear()).type(GameType.REGULAR_SEASON.getValue()).teamId(6).score(123).build()
                 );
